// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders a checked Switch 1`] = `
<label
  className="MuiFormControlLabel-root-1"
>
  <span
    className="MuiSwitch-root-5"
  >
    <span
      className="MuiButtonBase-root-24 MuiIconButton-root-18 MuiSwitchBase-root-14 MuiSwitch-switchBase-8 MuiSwitch-colorSecondary-11 MuiSwitchBase-checked-15 MuiSwitch-checked-9"
      onBlur={[Function]}
      onCheck={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-23"
      >
        <span
          className="MuiSwitch-icon-6 MuiSwitch-iconChecked-7"
        />
        <input
          checked={true}
          className="MuiSwitchBase-input-17"
          name="mySwitch"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-27"
      />
    </span>
    <span
      className="MuiSwitch-bar-13"
    />
  </span>
  <span
    className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-4"
  />
</label>
`;

exports[`Switch renders an unchecked Switch 1`] = `
<label
  className="MuiFormControlLabel-root-1"
>
  <span
    className="MuiSwitch-root-5"
  >
    <span
      className="MuiButtonBase-root-24 MuiIconButton-root-18 MuiSwitchBase-root-14 MuiSwitch-switchBase-8 MuiSwitch-colorSecondary-11"
      onBlur={[Function]}
      onCheck={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-23"
      >
        <span
          className="MuiSwitch-icon-6"
        />
        <input
          checked={false}
          className="MuiSwitchBase-input-17"
          name="mySwitch"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-27"
      />
    </span>
    <span
      className="MuiSwitch-bar-13"
    />
  </span>
  <span
    className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-4"
  />
</label>
`;

exports[`Switch should ignore checked 1`] = `
<label
  className="MuiFormControlLabel-root-1"
>
  <span
    className="MuiSwitch-root-5"
  >
    <span
      className="MuiButtonBase-root-24 MuiIconButton-root-18 MuiSwitchBase-root-14 MuiSwitch-switchBase-8 MuiSwitch-colorSecondary-11"
      onBlur={[Function]}
      onCheck={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-23"
      >
        <span
          className="MuiSwitch-icon-6"
        />
        <input
          checked={false}
          className="MuiSwitchBase-input-17"
          name="mySwitch"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-27"
      />
    </span>
    <span
      className="MuiSwitch-bar-13"
    />
  </span>
  <span
    className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-4"
  />
</label>
`;

exports[`Switch should ignore defaultChecked 1`] = `
<label
  className="MuiFormControlLabel-root-1"
  defaultChecked={true}
>
  <span
    className="MuiSwitch-root-5"
  >
    <span
      className="MuiButtonBase-root-24 MuiIconButton-root-18 MuiSwitchBase-root-14 MuiSwitch-switchBase-8 MuiSwitch-colorSecondary-11"
      onBlur={[Function]}
      onCheck={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label-23"
      >
        <span
          className="MuiSwitch-icon-6"
        />
        <input
          checked={false}
          className="MuiSwitchBase-input-17"
          name="myCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="MuiTouchRipple-root-27"
      />
    </span>
    <span
      className="MuiSwitch-bar-13"
    />
  </span>
  <span
    className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-4"
  />
</label>
`;
